# optimize-eig

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: check-code.yaml  test-docker-image.yaml
docs/: mkdocs.yaml
docs/docs/: reference.md
optimize_eig/: __init__.py  optimize_eig.py
tests/: optimize_eig_test.py
tests/scenarios/steps/: simple_calculation_test.py
